--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
   build-test:
     name: Tests • ${{ matrix.os }} • py${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
@@ -34,31 +35,28 @@ jobs:
           python-version: ${{ matrix.python-version }}
           enable-cache: true
 
+      - name: Sync dependencies (main + dev)
+        run: |
+          # Create .venv and install project + dev group strictly from uv.lock
+          uv sync --dev --frozen
+
       - name: Show versions
         run: |
-          python --version
-          uv --version
-
-      - name: Install project (dev)
-        run: |
-          # create .venv and install deps + dev group
-          uv sync --dev
+          uv run python --version
+          uv run ruff --version
+          uv run pytest --version
 
       - name: Lint (ruff)
-        run: |
-          ruff version
-          ruff check .
+        run: uv run ruff check .
 
       - name: Run unit tests (perf excluded)
         env:
           PYTHONUTF8: "1"
-        run: |
-          pytest -q -m "not perf" --disable-warnings
+        run: uv run pytest -q -m "not perf" --disable-warnings
 
-      # Optional: smoke one example script on Linux only
-      - name: Smoke example
+      - name: Smoke example script
         if: matrix.os == 'ubuntu-latest'
         run: |
           if [ -f examples/sync_model_quickstart.py ]; then
-            python examples/sync_model_quickstart.py > /dev/null
+            uv run python examples/sync_model_quickstart.py > /dev/null
           fi
