--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pytest>=8.0.0",
-    "ruff>=0.8.0",
+    "ruff==0.12.10",
     "pytest-cov>=5.0.0",
     "pytest-asyncio>=0.24.0",
     "pytest-benchmark>=5.1.0",
