--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiosqlite>=0.21.0",
-    "pydantic>=2.11.7"
+    "pydantic>=2.11.7",
 ]
 
 [dependency-groups]
@@ -25,6 +25,7 @@ build-backend = "uv_build"
 [tool.ruff]
 target-version = "py312"
 line-length = 100
+src = ["sqler", "examples"]
 
 [tool.ruff.lint]
 select = [
