--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dev = [
     "pytest-cov>=5.0.0",
     "pytest-asyncio>=0.24.0",
     "pytest-benchmark>=5.1.0",
+    "httpx>=0.27.0",
+    "fastapi>=0.115.0",
 ]
 
 [build-system]
