--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dev = [
     "pytest-benchmark>=5.1.0",
     "httpx>=0.27.0",
     "fastapi>=0.115.0",
+    "asgi-lifespan>=2.1.0",
 ]
 
 [build-system]
